--- a/src/main/resources/Cherry.jrxml
+++ b/src/main/resources/Cherry.jrxml
@@ -14,7 +14,7 @@
 		</conditionalStyle>
 	</style>
 	<queryString language="SQL">
-		<![CDATA[select * from  guillermodb.employee]]>
+		<![CDATA[select * from  employee_directory.employee]]>
 	</queryString>
 	<field name="id" class="java.lang.Integer">
 		<property name="com.jaspersoft.studio.field.label" value="id"/>
